[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncio>=4.0.0",
    "beanie>=2.0.1",
    "chromadb>=1.4.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "fastapi-scheduler>=0.0.15",
    "fastapi-socketio>=0.0.10",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.1.3",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "orjson>=3.11.5",
    "passlib[bcrypt]>=1.7.4",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.40.0",
    "websockets>=15.0.1",
    "wikipedia>=1.4.0",
]
